--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.1",
     "postcss": "8.4.23",
